--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,10 @@ site_description: Deep, practical docs on backend, systems, and engineering mind
 site_url: https://codingismeditation.github.io/template
 nav:
   - Home: index.md
-  - Networking: kintsugi-stack-networking/index.md
+  - Interview:
+    - Index: interview/index.md
+    - Networking: interview/networking/index.md
+  - Contributing: contributing.md
   # - Backend:
   #     - Roadmap: backend/roadmap.md
   #     - Databases: backend/databases.md
