Update image hashes in manifest.json and adjust text overflow behavior in custom.yml

--- a/layouts/custom.yml
+++ b/layouts/custom.yml
@@ -11,7 +11,7 @@ layers:
     typography:
       content: "{{ title }}"
       align: start
-      overflow: wrap
+      overflow: shrink
       color: "#000000"
       line:
         amount: 4
