Update GitHub link in mkdocs.yml to point to the correct repository

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,7 +71,7 @@ extra:
       link: https://x.com/siddhantbuilds
       name: Author's Twitter
     - icon: fontawesome/brands/github
-      link: https://kintsugi-programmer.github.io/
+      link: https://github.com/codingismeditation
       name: Author's GitHub
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/in/siddhantbuilds/
