--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
     - Index: interview/index.md
     - Networking: interview/networking/index.md
     - DBMS: interview/dbms/index.md
+    - SQL-DS: interview/sql-ds/index.md
   - About: about.md
   - Contributing: contributing.md
   # - Backend:
