--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
   - The Art of Backend:
     - Index: backend-art/index.md
     - Overview: backend-art/overview.md
+    - Introduction to Backend Engineering: backend-art/introduction.md
   - Interview:
     - Index: interview/index.md
     - Networking: interview/networking/index.md
